--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-flask==3.0.2
-flask-cors==4.0.0
-python-dotenv==1.0.1
-requests==2.31.0
+flask
+flask-cors
+python-dotenv
+requests
 pytube>=15.0.0
-PyPDF2==3.0.1
-python-magic==0.4.27
-openai==1.12.0
-pydantic==2.6.1
+PyPDF2>=2.0.0
+python-magic
+openai
+pydantic
 pymongo==4.6.1
 motor==3.3.2
+sqlalchemy
+pdfminer.six
